Refactor Counterparty domain to use `this` for field references and enhance auditing features
- Standardized field access using `this` for clarity and consistency across Counterparty-related classes.
- Updated auditing logic in key Counterparty operations, ensuring accurate record-keeping for entity changes.
- Applied auditing improvements to methods handling addresses, contacts, emails, and bank accounts.
- Enhanced auditing support by integrating `AuditEntry` and `AuditEvent` with additional operations.
- Improved constructor initialization for lists in the `Counterparty` class.